# BounceRender

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bounce-gui/: CMakeLists.txt  main.cpp
bounce-gui/docker/: Dockerfile
bounce-gui/src/App/: Application.cpp  Application.h  EntryPoint.h  Event.h  Layer.h  LayerStack.h  Logging.h  Window.h
bounce-gui/src/App/Backends/: GlfwWindow.cpp  GlfwWindow.h
bounce-gui/src/App/Backends/OpenGL/: GlfwWindow.cpp  GlfwWindow.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
bounce-gui/src/App/Core/: Application.cpp  Application.h  Event.h  Inputs.h  KeyCodes.h  Layer.h  LayerStack.cpp  Logging.h  MouseButtons.h  Window.h
bounce-gui/src/App/Events/: ApplicationEvent.h  KeyEvent.h  MouseEvent.h
bounce-gui/src/App/Layers/: ImGuiLayer.cpp  ImGuiLayer.h
bounce-gui/src/App/Platform/Windows/: GlfwWindow.cpp  GlfwWindow.h  WindowsInputs.cpp
bounce-gui/src/App/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Context.h  FrameBuffer.cpp  FrameBuffer.h  Line.h  Material.h  Mesh.h  RenderItem.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
bounce-gui/src/Layers/: RenderLayer.cpp  RenderLayer.h  UILayer.cpp  UILayer.h
bounce-gui/src/Rebound/Backends/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
bounce-gui/src/Rebound/Core/: Application.cpp  Application.h  EntryPoint.h  Event.h  Inputs.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Logging.h  MouseButtons.h  Notifier.cpp  Notifier.h  Rebound.h  Widget.cpp  Widget.h  Window.h
bounce-gui/src/Rebound/Events/: ApplicationEvent.h  KeyEvent.h  MouseEvent.h
bounce-gui/src/Rebound/Layers/: ImGuiLayer.cpp  ImGuiLayer.h  MainLayer.cpp  MainLayer.h
bounce-gui/src/Rebound/Platform/Windows/: GlfwWindow.cpp  GlfwWindow.h  WindowsInputs.cpp
bounce-gui/src/Rebound/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Context.h  DrawItem.h  FrameBuffer.cpp  FrameBuffer.h  Item.h  Line.cpp  Line.h  Material.h  Mesh.cpp  Mesh.h  RenderDelegate.cpp  RenderDelegate.h  RenderEntity.cpp  RenderEntity.h  RenderScene.cpp  RenderScene.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
bounce-gui/src/Rebound/Renderer/Bounce/: FrameBuffer.cpp  FrameBuffer.h  Mesh.cpp  Mesh.h  RenderDelegate.cpp  RenderDelegate.h
bounce-gui/src/Rebound/Renderer/Hop/: Buffer.cpp  Buffer.h  Context.h  DrawItem.h  FrameBuffer.cpp  FrameBuffer.h  Item.h  Line.cpp  Line.h  Material.h  Mesh.cpp  Mesh.h  RenderDelegate.cpp  RenderDelegate.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
bounce-gui/src/Rebound/Renderer/Hop/Backends/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  (+8 more)
bounce-gui/src/Rebound/Scene/: AttributeValue.h  Data.cpp  Data.h  Entity.cpp  Entity.h  EntityRegistry.cpp  EntityRegistry.h  Scene.cpp  Scene.h  SceneNotifier.h  Type.cpp  Type.h
bounce-gui/src/Rebound/Scene/Entities/: Line.cpp  Line.h  Mesh.cpp  Mesh.h  Xform.cpp  Xform.h
bounce-gui/src/Rebound/Widgets/: AttributeView.cpp  AttributeView.h  RenderView.cpp  RenderView.h  SceneHierarchy.cpp  SceneHierarchy.h
bounce-render/: CMakeLists.txt
bounce-render/docker/: Dockerfile
bounce-render/include/BounceRender/Bxdfs/: Lambertian.h
bounce-render/include/BounceRender/Core/: BSDF.h  BxDF.h  Material.h  Raytracer.h  Sampling.h  Scene.h  random.h
bounce-render/include/BounceRender/Materials/: LambertMaterial.h
bounce-render/resources/geometries/wheelBarrow/: tmruaaeda.json  wheelBarrow_LOD0.abc  wheelBarrow_LOD1.abc  wheelBarrow_LOD2.abc  wheelBarrow_LOD3.abc  wheelBarrow_LOD4.abc  wheelBarrow_LOD5.abc
bounce-render/src/Bxdfs/: Lambertian.cpp  Lambertian.h
bounce-render/src/Core/: BSDF.cpp  BSDF.h  Bounce.cpp  Bounce.h  BxDF.cpp  Camera.cpp  Camera.h  Logging.h  Material.cpp  Material.h  Ray.h  Raytracer.cpp  Raytracer.h  Sampling.cpp  Scene.cpp  Scene.h
bounce-render/src/Materials/: LambertMaterial.cpp  LambertMaterial.h
bounce-render/src/bxdfs/: Lambertian.cpp  Lambertian.h
bounce-render/src/core/: BSDF.cpp  BSDF.h  Bounce.h  BxDF.cpp  BxDF.h  Material.h  Raytracer.cpp  Raytracer.h  Sampling.cpp  Sampling.h  Scene.cpp  Scene.h  global.cpp  global.h  random.h
bounce-render/src/materials/: LambertMaterial.cpp  LambertMaterial.h
bounce-render/tests/: simple_render.cpp
(+3 files in other folders)
